# pyview-example-ai-chat

./: LICENSE  justfile  pyproject.toml  readme.md
src/pyview_example_ai_chat/: app.py
src/pyview_example_ai_chat/views/: __init__.py  defaultTemplate.py
src/pyview_example_ai_chat/views/chat/: __init__.py  chat.html  chat.py  filters.py  summarize.py
src/pyview_example_ai_chat/views/chat/models/: chat_message.py
src/pyview_example_ai_chat/views/chat/static/: chat.css  clipboard.js  code_highlight.css
src/pyview_example_ai_chat/views/chat/storage/: chat_storage.py
