[project]
name = "pyview-example-ai-chat"
version = "0.1.0"
description = "pyview example with ai chat"
authors = [
    { name = "Larry Ogrodnek", email = "ogrodnek@gmail.com" },
]
license = "MIT"
readme = "readme.md"
requires-python = ">=3.14"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

dependencies = [
    "openai>=1.44.1",
    "markdown>=3.7",
    "pygments>=2.18.0",
    "pyview-web>=0.8.0a1",
    "uvicorn>=0.40.0",
]

[project.urls]
Documentation = "https://github.com/pyview/pyview-example-ai-chat"
Homepage = "https://github.com/pyview/pyview-example-ai-chat"
Repository = "https://github.com/pyview/pyview-example-ai-chat"

[dependency-groups]
dev = [
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyview_example_ai_chat"]
